; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_hb-backend.c_ghb_mix_opts_filter.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_hb-backend.c_ghb_mix_opts_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [23 x i8] c"ghb_mix_opts_filter()\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ghb_mix_opts_filter(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i32 @g_debug(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %7 = call %struct.TYPE_4__* @hb_mixdown_get_next(%struct.TYPE_4__* null)
  store %struct.TYPE_4__* %7, %struct.TYPE_4__** %5, align 8
  br label %8

8:                                                ; preds = %25, %2
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %10 = icmp ne %struct.TYPE_4__* %9, null
  br i1 %10, label %11, label %28

11:                                               ; preds = %8
  %12 = load i32*, i32** %3, align 8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @hb_mixdown_has_codec_support(i32 %18, i32 %19)
  %21 = icmp ne i32 %20, 0
  %22 = xor i1 %21, true
  %23 = zext i1 %22 to i32
  %24 = call i32 @grey_combo_box_item(i32* %12, i32 %15, i32 %23)
  br label %25

25:                                               ; preds = %11
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %27 = call %struct.TYPE_4__* @hb_mixdown_get_next(%struct.TYPE_4__* %26)
  store %struct.TYPE_4__* %27, %struct.TYPE_4__** %5, align 8
  br label %8

28:                                               ; preds = %8
  ret void
}

declare dso_local i32 @g_debug(i8*) #1

declare dso_local %struct.TYPE_4__* @hb_mixdown_get_next(%struct.TYPE_4__*) #1

declare dso_local i32 @grey_combo_box_item(i32*, i32, i32) #1

declare dso_local i32 @hb_mixdown_has_codec_support(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
